# trace-editor

./: LICENSE  Makefile  README  main.c
plugin/: Makefile.am  configure.ac  plugin.c
plugin/editor/: Makefile.am  editor-utils.c  editor.c  editor.h
